Setup for Directory structure, entities, authentication, etc
